--- a/src/App.less
+++ b/src/App.less
@@ -44,3 +44,16 @@ body {
     max-width: 20%;
   }
 }
+
+.h100 {
+  height: 100%;
+}
+.w100 {
+  width: 100%;
+}
+
+.wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
