--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -2,9 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
 }
 
 .title {
+  color: #000;
   font-size: 24px;
 }
 
