--- a/src/Components/Main/main.module.css
+++ b/src/Components/Main/main.module.css
@@ -1,7 +1,4 @@
 .main {
   flex: 1 1 auto;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding-top: 1rem;
+  padding: 1rem;
 }
